Fixed some colours on dark mode.

--- a/components/Card.module.css
+++ b/components/Card.module.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: var(--white);
+  background-color: var(--foreground);
 }
 
 .card-title {
