--- a/components/Page.module.css
+++ b/components/Page.module.css
@@ -2,5 +2,5 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-color: var(--white);
+    background-color: var(--background);
 }
